<resources>
    <string name="app_name">RelativeLayout</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ben_text_view">Ben</string>
    <string name="kunal_text_view">kunal</string>
    <string name="Kagure">Kangure</string>
    <string name="natalie_text_view">Natalie</string>
    <string name="lyia_me_text_view">Lyia Me</string>
    <string name="jennie_text_view">Jennie</string>
    <string name="omoju_text_view">Omoju</string>
    <string name="amy_text_view">Amy</string>
    <string name="pebble_beach">Pebble Beach</string>
    <string name="california">California</string>
    <string name="ten_miles_away">10 miles away</string>
    <string name="from">From, Syed Sayem</string>
    <string name="Happy_birthday">Happy Birthday Ben!</string>
</resources>
