<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#DD2C00">


    <TextView
        android:id="@+id/ben_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="24sp"
        android:text="@string/ben_text_view"
        android:textColor="#FFFFFF"
        android:background="#1A237E"/>

    <TextView
        android:id="@+id/kunal_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kunal_text_view"
        android:textSize="24sp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/ben_text_view"
        android:layout_toLeftOf="@+id/ben_text_view"
        android:textColor="#FFFFFF"
        android:background="#1A237E"/>

    <TextView
        android:id="@+id/kagure_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Kagure"
        android:layout_toRightOf="@+id/ben_text_view"
        android:layout_toEndOf="@+id/ben_text_view"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:background="#1A237E"/>

    <TextView
        android:id="@+id/natalie_text_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/natalie_text_view"
        android:layout_above="@+id/lya_me_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:background="#1A237E"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/lya_me_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lyia_me_text_view"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:background="#1A237E"/>


    <TextView
        android:id="@+id/jennie_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/jennie_text_view"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#FFFFFF"
        android:background="#1A237E"/>

    <TextView
        android:id="@+id/omoju_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/omoju_text_view"
        android:layout_above="@+id/jennie_text_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#FFFFFF"
        android:background="#1A237E"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/amy_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/amy_text_view"
        android:layout_above="@+id/omoju_text_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#FFFFFF"
        android:background="#1A237E"
        android:layout_marginBottom="5dp"/>
</RelativeLayout>





